# guitarOCR

./: .gitattributes  .gitignore  README.md  pdf_to_gp.py  pyproject.toml
configs/: glm_ocr_measure_sequence_lora_fp16.yaml  glm_ocr_measure_sequence_v2_lora_fp16.yaml  guitarpro8_multimode_v1.json  measure_sequence_release_gate.json
database/: README.md
docs/: EVENT_IR_SCHEMA.md  EXPERIMENT_RESULTS.md  GP8_MEASURE_SEQUENCE.md  GUITAR_PRO_DATASET.md  GUITAR_PRO_END_TO_END.md  GUITAR_PRO_PARITY_PLAN.md  OCR_CONTEXT_MODEL_ASSESSMENT.md  RECOGNITION_ARCHITECTURE.md
guitarocr/: __init__.py  guitarpro_runtime.py  paths.py  tuxguitar_runtime.py
guitarocr/cli/: __init__.py  check_install.py  classify_layout.py  pdf_to_gp.py
guitarocr/data/: __init__.py  augment_gpif_technique_labels.py  build_cross_renderer_benchmark.py  build_fret_token_dataset.py  build_gp8_measure_sequence_dataset.py  build_guitarpro_rhythm_dataset.py  build_guitarpro_tie_dataset.py  build_score_event_locator_dataset.py  build_score_rhythm_dataset.py  build_source_disjoint_layout_coco.py  build_symbol_dataset.py  build_tab_detector_dataset.py  build_tab_event_locator_dataset.py  build_tab_rhythm_dataset.py  build_tie_event_dataset.py  fret_token_crop.py  (+5 more)
java/: TuxGuitarAtomicSymbolBuilder.java  TuxGuitarDatasetBuilder.java  TuxGuitarIrGp5Writer.java  TuxGuitarPdfRenderer.java  TuxGuitarScoreRhythmAnnotationBuilder.java  TuxGuitarTabAnnotationBuilder.java
output/: README.md
scripts/: build_database.ps1  build_gp8_measure_sequence_dataset.ps1  build_guitarpro_multimode_dataset.ps1  build_score_rhythm_dataset.ps1  build_tuxguitar_page_annotations.ps1  common.ps1  download_glm_ocr_base.ps1  evaluate_glm_ocr_measure_sequence.ps1  evaluate_interim_checkpoint.ps1  promote_models.ps1  run_cross_renderer_benchmark.ps1  run_gp_acceptance.ps1  run_guitarpro_domain_adaptation.ps1  run_guitarpro_pdf_to_gp5.ps1  run_rhythm_context.ps1  run_score_event_locator.ps1  run_symbol_cnn.ps1  run_tab_detector.ps1  run_tab_only_models.ps1  run_tie_context.ps1  setup_windows.ps1  train_glm_ocr_measure_sequence.ps1  validate_database.ps1  wait_for_glm_ocr_training.ps1
weights/: README.md  atomic_symbol_cnn.pt  fret_token_cnn.pt  pick_stroke_context_cnn.pt  rhythm_context_cnn.pt  score_event_locator.pt  tab_event_locator.pt  tab_rhythm_context_cnn.pt  tab_symbol_detector.pt  tab_technique_context_cnn.pt  tab_tie_context_cnn.pt  technique_context_cnn.pt  tie_context_cnn.pt
(+72 files in other folders)
